CSS bugfix for demo on Safari

--- a/docs/docs.scss
+++ b/docs/docs.scss
@@ -250,6 +250,7 @@ $phone-ratio: 2.01;
   height: 1rem;
   position: absolute;
   top: -0.5rem;
+  transform: translate3d(0, 0, 0);
   width: 1rem;
 
   &:nth-child(1) {
